--- a/www/scss/main-light.scss
+++ b/www/scss/main-light.scss
@@ -27,6 +27,7 @@ html.light {
   --c-draft-indicator-color: #232429;
   --c-hero-bg: #232429;
   --c-navbar-bg: #232429;
+  --c-navbar-collapse-bg: var(--bs-gray-800); /* for the slide menus */
   --c-notice: black;
   --c-notice-bg: #e0d9d1;
   --c-recent-statements: var(--bs-body-color);
